--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <style>* { padding: 0; margin: 0; } canvas { background: #eee; display: block; margin: 0 auto; }</style>
 </head>
 <body>
-
+ <h1> My WebSite<h1>
 <canvas id="myCanvas" width="480" height="320"></canvas>
 
 <script>
