--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body onload="startGame()">
-<input type="number" pattern="[0-9]*" onkeydown="accelerate(-0.2)" onkeyup="accelerate(0.05)">
+<p><button ondblclick="accelerate(-0.2)" onclick="accelerate(0.05)">ACCELERATE</button></p>
 <p>Use the ACCELERATE button to stay in the air</p>
 <p>How long can you stay alive?</p>
 <script>
