--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <script>
         var canvas = document.getElementById("myCanvas");
         var ctx = canvas.getContext("2d");
-        var ballRadius = 10;
+        var ballRadius = 7;
         var x = canvas.width/2;
-        var y = canvas.height-30;
+        var y = canvas.height-40;
         var dx = 2;
         var dy = -2;
         var paddleHeight = 10;
@@ -39,19 +39,19 @@
         document.addEventListener("mousemove", mouseMoveHandler, false);
 
         function keyDownHandler(e) {
-            if(e.key == "Right" || e.key == "ArrowRight") {
+            if(e.key === "Right" || e.key === "ArrowRight") {
                 rightPressed = true;
             }
-            else if(e.key == "Left" || e.key == "ArrowLeft") {
+            else if(e.key === "Left" || e.key === "ArrowLeft") {
                 leftPressed = true;
             }
         }
 
         function keyUpHandler(e) {
-            if(e.key == "Right" || e.key == "ArrowRight") {
+            if(e.key === "Right" || e.key === "ArrowRight") {
                 rightPressed = false;
             }
-            else if(e.key == "Left" || e.key == "ArrowLeft") {
+            else if(e.key === "Left" || e.key === "ArrowLeft") {
                 leftPressed = false;
             }
         }
@@ -66,12 +66,12 @@
             for(var c=0; c<brickColumnCount; c++) {
                 for(var r=0; r<brickRowCount; r++) {
                     var b = bricks[c][r];
-                    if(b.status == 1) {
+                    if(b.status === 1) {
                         if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight) {
                             dy = -dy;
                             b.status = 0;
                             score++;
-                            if(score == brickRowCount*brickColumnCount) {
+                            if(score === brickRowCount*brickColumnCount) {
                                 alert("YOU WIN, CONGRATS!");
                                 document.location.reload();
                             }
@@ -84,28 +84,28 @@
         function drawBall() {
             ctx.beginPath();
             ctx.arc(x, y, ballRadius, 0, Math.PI*2);
-            ctx.fillStyle = "#0095DD";
+            ctx.fillStyle = "#000000";
             ctx.fill();
             ctx.closePath();
         }
         function drawPaddle() {
             ctx.beginPath();
             ctx.rect(paddleX, canvas.height-paddleHeight, paddleWidth, paddleHeight);
-            ctx.fillStyle = "#0095DD";
+            ctx.fillStyle = "#008000";
             ctx.fill();
             ctx.closePath();
         }
         function drawBricks() {
             for(var c=0; c<brickColumnCount; c++) {
                 for(var r=0; r<brickRowCount; r++) {
-                    if(bricks[c][r].status == 1) {
+                    if(bricks[c][r].status === 1) {
                         var brickX = (r*(brickWidth+brickPadding))+brickOffsetLeft;
                         var brickY = (c*(brickHeight+brickPadding))+brickOffsetTop;
                         bricks[c][r].x = brickX;
                         bricks[c][r].y = brickY;
                         ctx.beginPath();
                         ctx.rect(brickX, brickY, brickWidth, brickHeight);
-                        ctx.fillStyle = "#0095DD";
+                        ctx.fillStyle = "#008080";
                         ctx.fill();
                         ctx.closePath();
                     }
