--- a/index.html
+++ b/index.html
@@ -1,174 +1,96 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <canvas id="myCanvas" width="480" height="320"></canvas>
+    <link rel="stylesheet" type="text/css" href="css.css">
 </head>
-    <script>
-        var canvas = document.getElementById("myCanvas");
-        var ctx = canvas.getContext("2d");
-        var ballRadius = 7;
-        var x = canvas.width/2;
-        var y = canvas.height-40;
-        var dx = 2;
-        var dy = -2;
-        var paddleHeight = 10;
-        var paddleWidth = 75;
-        var paddleX = (canvas.width-paddleWidth)/2;
-        var rightPressed = false;
-        var leftPressed = false;
-        var brickRowCount = 5;
-        var brickColumnCount = 3;
-        var brickWidth = 75;
-        var brickHeight = 20;
-        var brickPadding = 10;
-        var brickOffsetTop = 30;
-        var brickOffsetLeft = 30;
-        var score = 0;
-        var lives = 3;
+<body>
+<div id="field">
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
+    <div class="brick"></div>
 
-        var bricks = [];
-        for(var c=0; c<brickColumnCount; c++) {
-            bricks[c] = [];
-            for(var r=0; r<brickRowCount; r++) {
-                bricks[c][r] = { x: 0, y: 0, status: 1 };
-            }
-        }
+    <div id="paddle"></div>
+    <div id="ball" style="left: 154px; top: 258px;"></div>
+    <div id="lifesNode">3</div>
+    <div id="scoreNode">0</div>
+</div>
+<script>
+    (function (fld, pF, px, py, dx, dy, lifes, score) {
+        var cycle = setInterval(function () {
+            var bx = pF(ball.style.left = pF(ball.style.left) + dx + 'px'),
+                by = pF(ball.style.top = pF(ball.style.top) + dy + 'px'),
+                row = ((by - 30) / 14) | 0, col = (bx / 32) | 0;
 
-        document.addEventListener("keydown", keyDownHandler, false);
-        document.addEventListener("keyup", keyUpHandler, false);
-        document.addEventListener("mousemove", mouseMoveHandler, false);
+            if (bx < 0 && dx < 0 || bx >= 314 && dx > 0) dx *= -1;
+            if (bx + 6 >= px && bx + 6 <= px + 64 && by >= 259 && by <= 264) {
+                dy *= -1;
+                if (bx + 6 <= px + 21) dx = -6;
+                else if (bx + 6 >= px + 43) dx = 6;
+                else if (Math.abs(dx) == 6) dx = (dx * 2 / 3) | 0;
+            }
+            if (by < 0) dy *= -1;
+            if (by >= 288 && !--lifes) clearInterval(cycle), alert('Game over!');
+            if (by >= 288 && lifes) dy *= -1, lifesNode.innerHTML = lifes;
+            if (by >= 18 && by <= 100 && fld[row * 10 + col].className != 'removed') {
+                dy *= -1, fld[row * 10 + col].className = 'removed';
+                if (dx < 0 && ((bx | 0) % 32 < 10 || (bx | 0) % 32 > 22)) dx *= -1;
+                if (dx > 0 && (((bx + 12) | 0) % 32 < 10 || ((bx + 12) | 0) % 32 > 22)) dx *= -1;
+                scoreNode.innerHTML = ++score;
+                if (score == 50) clearInterval(cycle), alert('Victory!');
+            }
+        }, 1000 / 60);
 
-        function keyDownHandler(e) {
-            if(e.key === "Right" || e.key === "ArrowRight") {
-                rightPressed = true;
-            }
-            else if(e.key === "Left" || e.key === "ArrowLeft") {
-                leftPressed = true;
-            }
-        }
-
-        function keyUpHandler(e) {
-            if(e.key === "Right" || e.key === "ArrowRight") {
-                rightPressed = false;
-            }
-            else if(e.key === "Left" || e.key === "ArrowLeft") {
-                leftPressed = false;
-            }
-        }
-
-        function mouseMoveHandler(e) {
-            var relativeX = e.clientX - canvas.offsetLeft;
-            if(relativeX > 0 && relativeX < canvas.width) {
-                paddleX = relativeX - paddleWidth/2;
-            }
-        }
-        function collisionDetection() {
-            for(var c=0; c<brickColumnCount; c++) {
-                for(var r=0; r<brickRowCount; r++) {
-                    var b = bricks[c][r];
-                    if(b.status === 1) {
-                        if(x > b.x && x < b.x+brickWidth && y > b.y && y < b.y+brickHeight) {
-                            dy = -dy;
-                            b.status = 0;
-                            score++;
-                            if(score === brickRowCount*brickColumnCount) {
-                                alert("YOU WIN, CONGRATS!");
-                                document.location.reload();
-                            }
-                        }
-                    }
-                }
-            }
-        }
-
-        function drawBall() {
-            ctx.beginPath();
-            ctx.arc(x, y, ballRadius, 0, Math.PI*2);
-            ctx.fillStyle = "#000000";
-            ctx.fill();
-            ctx.closePath();
-        }
-        function drawPaddle() {
-            ctx.beginPath();
-            ctx.rect(paddleX, canvas.height-paddleHeight, paddleWidth, paddleHeight);
-            ctx.fillStyle = "#008000";
-            ctx.fill();
-            ctx.closePath();
-        }
-        function drawBricks() {
-            for(var c=0; c<brickColumnCount; c++) {
-                for(var r=0; r<brickRowCount; r++) {
-                    if(bricks[c][r].status === 1) {
-                        var brickX = (r*(brickWidth+brickPadding))+brickOffsetLeft;
-                        var brickY = (c*(brickHeight+brickPadding))+brickOffsetTop;
-                        bricks[c][r].x = brickX;
-                        bricks[c][r].y = brickY;
-                        ctx.beginPath();
-                        ctx.rect(brickX, brickY, brickWidth, brickHeight);
-                        ctx.fillStyle = "#008080";
-                        ctx.fill();
-                        ctx.closePath();
-                    }
-                }
-            }
-        }
-        function drawScore() {
-            ctx.font = "16px Arial";
-            ctx.fillStyle = "#0095DD";
-            ctx.fillText("Score: "+score, 8, 20);
-        }
-        function drawLives() {
-            ctx.font = "16px Arial";
-            ctx.fillStyle = "#0095DD";
-            ctx.fillText("Lives: "+lives, canvas.width-65, 20);
-        }
-
-        function draw() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            drawBricks();
-            drawBall();
-            drawPaddle();
-            drawScore();
-            drawLives();
-            collisionDetection();
-
-            if(x + dx > canvas.width-ballRadius || x + dx < ballRadius) {
-                dx = -dx;
-            }
-            if(y + dy < ballRadius) {
-                dy = -dy;
-            }
-            else if(y + dy > canvas.height-ballRadius) {
-                if(x > paddleX && x < paddleX + paddleWidth) {
-                    dy = -dy;
-                }
-                else {
-                    lives--;
-                    if(!lives) {
-                        alert("GAME OVER");
-                        document.location.reload();
-                    }
-                    else {
-                        x = canvas.width/2;
-                        y = canvas.height-30;
-                        dx = 3;
-                        dy = -3;
-                        paddleX = (canvas.width-paddleWidth)/2;
-                    }
-                }
-            }
-
-            if(rightPressed && paddleX < canvas.width-paddleWidth) {
-                paddleX += 7;
-            }
-            else if(leftPressed && paddleX > 0) {
-                paddleX -= 7;
-            }
-
-            x += dx;
-            y += dy;
-            requestAnimationFrame(draw);
-        }
-
-        draw();;
+        document.addEventListener('mousemove', function (e) {
+            px = (e.pageX > 40) ? ((e.pageX < 290) ? e.pageX - 40 : 256) : 0;
+            paddle.style.left = px + 'px';
+        }, false);
+    }(field.children, parseFloat, 129, 270, -4, -4, 3, 0));
 </script>
+</body>
