--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
+    <h1>MyGames<h1>
 <div id="field">
     <div class="brick"></div>
     <div class="brick"></div>
