--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
-    <h1>MyGames<h1>
 <div id="field">
     <div class="brick"></div>
     <div class="brick"></div>
@@ -74,17 +73,17 @@
                 dy *= -1;
                 if (bx + 6 <= px + 21) dx = -6;
                 else if (bx + 6 >= px + 43) dx = 6;
-                else if (Math.abs(dx) == 6) dx = (dx * 2 / 3) | 0;
+                else if (Math.abs(dx) === 6) dx = (dx * 2 / 3) | 0;
             }
             if (by < 0) dy *= -1;
-            if (by >= 288 && !--lifes) clearInterval(cycle), alert('Game over!');
+            if (by >= 288 && !--lifes) clearInterval(cycle), location.reload();
             if (by >= 288 && lifes) dy *= -1, lifesNode.innerHTML = lifes;
-            if (by >= 18 && by <= 100 && fld[row * 10 + col].className != 'removed') {
+            if (by >= 18 && by <= 100 && fld[row * 10 + col].className !== 'removed') {
                 dy *= -1, fld[row * 10 + col].className = 'removed';
                 if (dx < 0 && ((bx | 0) % 32 < 10 || (bx | 0) % 32 > 22)) dx *= -1;
                 if (dx > 0 && (((bx + 12) | 0) % 32 < 10 || ((bx + 12) | 0) % 32 > 22)) dx *= -1;
                 scoreNode.innerHTML = ++score;
-                if (score == 50) clearInterval(cycle), alert('Victory!');
+                if (score === 50) clearInterval(cycle), alert('Victory!');
             }
         }, 1000 / 60);
 
