--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
-<h1>MyGames</h1>
+<h1>MyGamesArkanoid</h1>
 <div id="field">
     <div class="brick"></div>
     <div class="brick"></div>
